[gd_scene load_steps=38 format=2]

[ext_resource path="res://Scripts/Titlescreen/titlescreen.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/font_48.res" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/Titlescreen/Buttons/buttons.theme" type="Theme" id=3]
[ext_resource path="res://Scripts/Titlescreen/menu_button.gd" type="Script" id=4]
[ext_resource path="res://Assets/Fonts/atari full.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Scenes/Misc/FadeIn.tscn" type="PackedScene" id=6]
[ext_resource path="res://Animations/titlescreen.anim" type="Animation" id=7]
[ext_resource path="res://Scenes/Effects/Cloud.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Obj/grass.obj" type="ArrayMesh" id=9]
[ext_resource path="res://Materials/bigger_outline_green.material" type="Material" id=10]
[ext_resource path="res://Materials/green.material" type="Material" id=11]
[ext_resource path="res://Materials/yellow.material" type="Material" id=12]
[ext_resource path="res://Assets/Obj/hamster.obj" type="ArrayMesh" id=13]
[ext_resource path="res://Materials/Player/player_white.material" type="Material" id=14]
[ext_resource path="res://Materials/Player/player_black.material" type="Material" id=15]
[ext_resource path="res://Materials/Player/player_ball.material" type="Material" id=16]
[ext_resource path="res://Assets/Obj/stone.obj" type="ArrayMesh" id=17]
[ext_resource path="res://Materials/bigger_outline_blue.material" type="Material" id=18]
[ext_resource path="res://Assets/Obj/dirthill.obj" type="ArrayMesh" id=19]
[ext_resource path="res://Assets/Obj/flowerpot.obj" type="ArrayMesh" id=20]
[ext_resource path="res://Materials/bigger_outline_red.material" type="Material" id=21]
[ext_resource path="res://Materials/bigger_outline_black.material" type="Material" id=22]
[ext_resource path="res://Shaders/cel.shader" type="Shader" id=23]
[ext_resource path="res://Materials/blue.material" type="Material" id=24]
[ext_resource path="res://Assets/Obj/ladder.obj" type="ArrayMesh" id=25]
[ext_resource path="res://Materials/bigger_outline_yellow.material" type="Material" id=26]
[ext_resource path="res://Assets/Obj/flagpole.obj" type="ArrayMesh" id=27]
[ext_resource path="res://Audio/SFX/select.wav" type="AudioStream" id=28]
[ext_resource path="res://Audio/SFX/accept.wav" type="AudioStream" id=29]
[ext_resource path="res://Scenes/Misc/PlayMusic.tscn" type="PackedScene" id=30]
[ext_resource path="res://Audio/Music/titlescreen.ogg" type="AudioStream" id=31]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[sub_resource type="CapsuleMesh" id=2]

[sub_resource type="CubeMesh" id=3]

[sub_resource type="SphereMesh" id=4]
material = ExtResource( 16 )

[sub_resource type="ShaderMaterial" id=5]
next_pass = ExtResource( 22 )
shader = ExtResource( 23 )
shader_param/use_shade = true
shader_param/use_specular = false
shader_param/use_rim = false
shader_param/base_use_light_color = false
shader_param/specular_use_light_color = false
shader_param/rim_use_light_color = false
shader_param/base_color = Color( 0.219608, 0.717647, 0.392157, 1 )
shader_param/shade_color = Color( 0.145098, 0.443137, 0.47451, 1 )
shader_param/specular_tint = Color( 0.5, 0.5, 0.5, 1 )
shader_param/rim_tint = Color( 0.5, 0.5, 0.5, 1 )
shader_param/shade_threshold = -0.197
shader_param/shade_softness = 0.0
shader_param/specular_threshold = 0.0
shader_param/specular_softness = 0.0
shader_param/rim_threshold = 0.0
shader_param/rim_spread = 0.0
shader_param/rim_softness = 0.0

[sub_resource type="BoxShape" id=6]
extents = Vector3( 1.46149, 0.930553, 1.29397 )

[node name="Titlescreen" type="Spatial"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -0.983455, -0.00522677, -0.181074, -0.0227477, 0.995235, 0.0948199, 0.179716, 0.0973702, -0.978888, -15.2496, -0.481929, 15.9206 )
current = true
fov = 90.0
far = 500.0

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.559602, -0.424212, 0.711962, 0.583544, 0.811697, 0.024972, -0.588491, 0.401487, 0.701774, 38.0481, 38.3371, 75.2737 )
shadow_enabled = true

[node name="GUI" type="CanvasLayer" parent="."]

[node name="Menu" type="VBoxContainer" parent="GUI"]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 640.0
alignment = 1

[node name="Logo" type="Label" parent="GUI/Menu"]
margin_right = 1040.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.2, 0.235294, 0.341176, 1 )
custom_colors/font_color_shadow = Color( 0.101961, 0.109804, 0.172549, 1 )
custom_constants/shadow_offset_y = 5
text = "go! BABSI"
align = 1

[node name="Buttons" type="VBoxContainer" parent="GUI/Menu"]
margin_top = 52.0
margin_right = 1040.0
margin_bottom = 540.0
size_flags_horizontal = 7
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="StartButton" type="Button" parent="GUI/Menu/Buttons"]
margin_top = 170.0
margin_right = 1040.0
margin_bottom = 234.0
grow_horizontal = 0
rect_min_size = Vector2( 128, 64 )
rect_pivot_offset = Vector2( 73.9515, 34.7865 )
size_flags_vertical = 0
theme = ExtResource( 3 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = true
action_mode = 0
script = ExtResource( 4 )
scene_to_load = "res://Scenes/Levels/Level1.tscn"

[node name="Label" type="Label" parent="GUI/Menu/Buttons/StartButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = 10.0
rect_scale = Vector2( 0.998872, 1 )
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.337255, 0.423529, 0.52549, 1 )
custom_colors/font_color_shadow = Color( 0.101961, 0.109804, 0.172549, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "Start"
align = 1
valign = 1

[node name="QuitButton" type="Button" parent="GUI/Menu/Buttons"]
margin_top = 254.0
margin_right = 1040.0
margin_bottom = 318.0
grow_horizontal = 0
rect_min_size = Vector2( 128, 64 )
rect_pivot_offset = Vector2( 73.9515, 34.7865 )
size_flags_vertical = 0
theme = ExtResource( 3 )
toggle_mode = true
action_mode = 0
script = ExtResource( 4 )
scene_to_load = "quit"

[node name="Label" type="Label" parent="GUI/Menu/Buttons/QuitButton"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1050.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.337255, 0.423529, 0.52549, 1 )
custom_colors/font_color_shadow = Color( 0.101961, 0.109804, 0.172549, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "Quit"
align = 1
valign = 1

[node name="VersionLabel" type="Label" parent="GUI/Menu"]
margin_top = 544.0
margin_right = 1040.0
margin_bottom = 560.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.337255, 0.423529, 0.52549, 1 )
custom_colors/font_color_shadow = Color( 0.101961, 0.109804, 0.172549, 1 )
custom_constants/shadow_offset_y = 2
text = "Alpha 1.2"

[node name="FadeIn" parent="GUI" instance=ExtResource( 6 )]
visible = false

[node name="Animation" type="AnimationPlayer" parent="."]
anims/titlescreen = ExtResource( 7 )

[node name="BG" type="Spatial" parent="."]
editor/display_folded = true

[node name="Cloud" parent="BG" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -59.4888, 80.3515, 79.1451 )

[node name="Grass" type="Spatial" parent="BG"]
editor/display_folded = true

[node name="Grass2" type="Spatial" parent="BG/Grass"]
transform = Transform( 0.188978, 0.064971, 0.0081336, -0.0633742, 0.175242, 0.0726221, 0.0164649, -0.0711971, 0.186172, -4.7809, -3.81696, 66.9102 )

[node name="Grass" type="MeshInstance" parent="BG/Grass/Grass2"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
mesh = ExtResource( 9 )
material/0 = ExtResource( 10 )
material/1 = ExtResource( 10 )
material/2 = ExtResource( 10 )

[node name="Grass" type="Spatial" parent="BG/Grass"]
transform = Transform( -0.160978, 0, -0.986958, 0, 1, 0, 0.986958, 0, -0.160978, 21.0303, -6.12518, 32.2513 )

[node name="Grass" type="MeshInstance" parent="BG/Grass/Grass"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
mesh = ExtResource( 9 )
material/0 = ExtResource( 10 )
material/1 = ExtResource( 10 )
material/2 = ExtResource( 10 )

[node name="Grass3" type="Spatial" parent="BG/Grass"]
transform = Transform( 0.918205, 0, -0.396105, -0.0524188, 0.991205, -0.121511, 0.392622, 0.132335, 0.910129, -9.70338, -2.29548, 51.7575 )

[node name="Grass" type="MeshInstance" parent="BG/Grass/Grass3"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
mesh = ExtResource( 9 )
material/0 = ExtResource( 10 )
material/1 = ExtResource( 10 )
material/2 = ExtResource( 10 )

[node name="Hill" type="Spatial" parent="BG"]
editor/display_folded = true

[node name="HilMesh" type="MeshInstance" parent="BG/Hill"]
transform = Transform( 28.4618, 0, 0, 0, 4.96054, 0.0144704, 0, -0.0461089, 15.8064, -18.1942, -6.33063, 37.2178 )
mesh = SubResource( 2 )
material/0 = ExtResource( 11 )

[node name="Ground" type="Spatial" parent="BG"]
editor/display_folded = true

[node name="GroundMesh" type="MeshInstance" parent="BG/Ground"]
transform = Transform( 58.0279, 0, 0, 0, 1, -8.74228e-08, 0, 5.86019e-06, 67.033, 0, -6.96645, 0 )
mesh = SubResource( 3 )
material/0 = ExtResource( 12 )

[node name="Player" type="Spatial" parent="BG"]
editor/display_folded = true
transform = Transform( -0.944719, 0.0252129, -0.326911, 0.0893521, 0.9791, -0.1827, 0.315473, -0.20181, -0.927227, 0, -6.53421, 30.1232 )

[node name="Hamster" type="MeshInstance" parent="BG/Player"]
transform = Transform( 0.0129965, 0.000293897, 7.43256e-05, -0.000302865, 0.0127261, 0.00263709, -1.31421e-05, -0.00263811, 0.0127295, -0.0439148, 5.36505, -3.90391 )
mesh = ExtResource( 13 )
material/0 = ExtResource( 14 )
material/1 = ExtResource( 15 )
material/2 = ExtResource( 15 )
material/3 = ExtResource( 15 )
material/4 = ExtResource( 15 )
material/5 = ExtResource( 15 )
material/6 = ExtResource( 14 )

[node name="Ball" type="MeshInstance" parent="BG/Player"]
transform = Transform( 5.18669, 0, 0, 0, 1.45779, -4.97761, -2.38419e-07, 4.97761, 1.45779, 0, 7.17697, 0 )
mesh = SubResource( 4 )
material/0 = null

[node name="Props" type="Spatial" parent="BG"]
editor/display_folded = true

[node name="stone" type="MeshInstance" parent="BG/Props"]
transform = Transform( 0.2, 0, 0, 0, 0.191457, 0.0578278, 0, -0.0578278, 0.191457, 35.1222, -11.1403, 61.9651 )
mesh = ExtResource( 17 )
material/0 = ExtResource( 18 )
material/1 = ExtResource( 18 )
material/2 = ExtResource( 18 )
material/3 = ExtResource( 18 )
material/4 = ExtResource( 18 )

[node name="dirthill" type="MeshInstance" parent="BG/Props"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 77.8832, -64.0377, 74.7822 )
mesh = ExtResource( 19 )
material/0 = ExtResource( 11 )

[node name="flowerpot" type="MeshInstance" parent="BG/Props"]
transform = Transform( 0.0998617, 0.00525769, 0, -0.00525769, 0.0998617, 0, 0, 0, 0.1, -46.3812, -4.14628, 62.2815 )
mesh = ExtResource( 20 )
material/0 = ExtResource( 21 )
material/1 = null
material/2 = ExtResource( 12 )
material/3 = ExtResource( 10 )
material/4 = SubResource( 5 )
material/5 = SubResource( 5 )
material/6 = SubResource( 5 )
material/7 = SubResource( 5 )
material/8 = SubResource( 5 )
material/9 = ExtResource( 24 )
material/10 = ExtResource( 24 )
material/11 = ExtResource( 24 )
material/12 = ExtResource( 24 )
material/13 = ExtResource( 24 )

[node name="ladder" type="MeshInstance" parent="BG/Props"]
transform = Transform( 0.16115, -0.114978, -0.0284721, 0.116709, 0.162339, 0.00499441, 0.0202395, -0.020639, 0.1979, 8.10406, -9.96038, 78.6144 )
mesh = ExtResource( 25 )
material/0 = ExtResource( 21 )
material/1 = ExtResource( 21 )
material/2 = ExtResource( 21 )
material/3 = ExtResource( 21 )
material/4 = ExtResource( 21 )
material/5 = ExtResource( 26 )
material/6 = ExtResource( 26 )
material/7 = ExtResource( 21 )

[node name="Goal" type="StaticBody" parent="BG"]
editor/display_folded = true
transform = Transform( 0.375136, 0, 0, 0, -0.375136, 3.27954e-08, 0, -3.27954e-08, -0.375136, -48.0506, -13.0345, 113.803 )

[node name="flagpole" type="MeshInstance" parent="BG/Goal"]
mesh = ExtResource( 27 )
material/0 = ExtResource( 21 )
material/1 = ExtResource( 18 )
material/2 = ExtResource( 26 )
material/3 = ExtResource( 18 )

[node name="CollisionShape" type="CollisionShape" parent="BG/Goal"]
transform = Transform( 10.4808, -1.7053e-13, -1.7053e-13, 5.68434e-13, 10.4808, 2.03288e-20, -1.13687e-13, 1.35525e-20, 10.4808, 0.824073, -3.03936e-07, -2.38011 )
shape = SubResource( 6 )

[node name="SelectSound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 28 )
bus = "SFX"

[node name="AcceptSound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 29 )
bus = "SFX"

[node name="PlayMusic" parent="." instance=ExtResource( 30 )]
stream = ExtResource( 31 )
[connection signal="fade_finished" from="GUI/FadeIn" to="." method="_on_FadeIn_fade_finished"]
